syntax = "proto3";

package grill.v1;

message LogoutUserRequest {
  string session_id = 2;
}

message LogoutUserResponse {
  bool success = 1;
}
